revised abstract and intro

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,71 @@
 % !TEX root = hazelnut-popl17.tex
+@inproceedings{DBLP:conf/oopsla/KatsJNV09,
+  author    = {Lennart C. L. Kats and
+               Maartje de Jonge and
+               Emma Nilsson{-}Nyman and
+               Eelco Visser},
+  title     = {Providing rapid feedback in generated modular language environments:
+               adding error recovery to scannerless generalized-LR parsing},
+  booktitle = {Proceedings of the 24th Annual {ACM} {SIGPLAN} Conference on Object-Oriented
+               Programming, Systems, Languages, and Applications, {OOPSLA} 2009,
+               October 25-29, 2009, Orlando, Florida, {USA}},
+  pages     = {445--464},
+  year      = {2009},
+  url       = {http://doi.acm.org/10.1145/1640089.1640122},
+  doi       = {10.1145/1640089.1640122},
+  timestamp = {Fri, 30 Oct 2009 13:58:43 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/oopsla/KatsJNV09},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sle/JongeNKV09,
+  author    = {Maartje de Jonge and
+               Emma Nilsson{-}Nyman and
+               Lennart C. L. Kats and
+               Eelco Visser},
+  title     = {Natural and Flexible Error Recovery for Generated Parsers},
+  booktitle = {Software Language Engineering, Second International Conference, {SLE}
+               2009, Denver, CO, USA, October 5-6, 2009, Revised Selected Papers},
+  pages     = {204--223},
+  year      = {2009},
+  timestamp = {Mon, 15 Mar 2010 12:22:10 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/sle/JongeNKV09},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{stefik2013empirical,
+  title={An empirical investigation into programming language syntax},
+  author={Stefik, Andreas and Siebert, Susanna},
+  journal={ACM Transactions on Computing Education (TOCE)},
+  volume={13},
+  number={4},
+  pages={19},
+  year={2013},
+  publisher={ACM}
+}
+
+@article{jones2006developer,
+  title={Developer beliefs about binary operator precedence},
+  author={Jones, DM},
+  journal={C Vu},
+  volume={18},
+  number={4},
+  pages={14--21},
+  year={2006}
+}
+
+@ARTICLE{7548903, 
+author={G. J. Holzmann}, 
+journal={IEEE Software}, 
+title={Brace Yourself}, 
+year={2016}, 
+volume={33}, 
+number={5}, 
+pages={34-37}, 
+keywords={programming;coding mistakes;programming;Encoding;Operator precendence;Software algorithms;Software engineering;Software reliability;Software verification;C code;C operators;operator precedence;precedence rules;programming;software development;software engineering;software verification}, 
+doi={10.1109/MS.2016.123}, 
+ISSN={0740-7459}, 
+month={Sept},}
 
 @article{DBLP:journals/jacm/Minsky70,
   author    = {Marvin Minsky},
