--- a/formally.tex
+++ b/formally.tex
@@ -69,7 +69,7 @@ $\arraycolsep=4pt\begin{array}{lllllll}
 \label{fig:hexp-syntax}
 \end{figure}
 \begin{figure}
-\noindent\fbox{$\tcompat{\htau}{\htau'}$}~~\text{$\tau$ and $\tau'$ are consistent}
+\noindent\fbox{$\tcompat{\htau}{\htau'}$}~~\text{$\htau$ and $\htau'$ are consistent}
 \begin{subequations}\label{eqns:consistency}
 \begin{mathpar}
 \inferrule{ }{
@@ -92,7 +92,7 @@ $\arraycolsep=4pt\begin{array}{lllllll}
 }~~~~\text{\hspace{-2px}(\ref*{eqns:consistency}a-d)}
 \end{mathpar}
 \end{subequations}
-\fbox{$\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$}~~\text{$\tau$ has matched arrow type $\tarr{\htau_1}{\htau_2}$}
+\fbox{$\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$}~~\text{$\htau$ has matched arrow type $\tarr{\htau_1}{\htau_2}$}
 \begin{subequations}
 \begin{minipage}{0.5\linewidth}
 \begin{equation}
