--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -136,8 +136,7 @@ check until the term inside the hole is \emph{finished}.
 Hazelnut is not intended as an end-user tool itself. Instead, it serves as a foundational account of typed structure
 editing. To that end, we describe how
 Hazelnut's rich metatheory, which we have mechanized using the Agda proof assistant, serves as a guide when we extend the calculus to include binary sum types. We also discuss various interpretations of holes, and in so doing
-reveal connections with gradual typing and contextual modal type theory
-(the Curry-Howard interpretation of contextual modal logic.) Finally, we
+reveal connections with gradual typing and contextual modal type theory, the Curry-Howard interpretation of contextual modal logic. Finally, we
 discuss how Hazelnut's semantics lends itself to implementation as an event-based functional reactive program. Our simple reference implementation is written in OCaml and compiled using \lstinline{js_of_ocaml}.
 
 \end{abstract}
