final popl17 submission

--- a/agda.tex
+++ b/agda.tex
@@ -6,10 +6,9 @@
 
 In order to
 formally establish that our design meets our stated objectives, we have
-mechanized the semantics and metatheory of Hazelnut as described above (and more concisely in the appendix) using the Agda proof
+mechanized the semantics and metatheory of Hazelnut as described above using the Agda proof
 assistant \cite{norell:thesis} (also see the Agda Wiki, hosted
-at \url{http://wiki.portal.chalmers.se/agda/}.) This development is available in the supplemental material. The mechanization also includes the  extension to the
-language described in Sec. \ref{sec:extending}.
+at \url{http://wiki.portal.chalmers.se/agda/}.) This development is available in the supplemental material. The mechanization also includes the  extension to Hazelnut described in Sec. \ref{sec:extending}.
 
 The documentation includes a more detailed discussion of the technical
 representation decisions that we made. The main idea is standard: we encode
