--- a/example.tex
+++ b/example.tex
@@ -1,46 +1,36 @@
 % !TEX root = hazelnut-popl17.tex
-The reader is encouraged to follow along with the examples that we will
-discuss in this section using the implementation.
-
-For concision, the right column in both Fig. \ref{ex1} and Fig \ref{ex2}
-lists only the rules that describe the edit \emph{at the cursor}. This
-omits both the rules needed to work down the tree structure of the
-{Z-expression} to the cursor and the rules to propagate the change back
-up. The missing rules are described in detail in
-Sec. \ref{sec:zipper-cases}, and these examples are included in full in the
-Agda mechanization described in Sec. \ref{sec:mech}.
-
 \subsection{Example 1: Constructing the Increment Function}
 
 Figure~\ref{fig:first-example} shows an edit sequence that constructs the
 increment function, of type $\tarr{\tnum}{\tnum}$, starting from the empty
 hole via the indicated sequence of {actions}. We will introduce Hazelnut's
 formal syntax and define the referenced rules in
-Sec. \ref{sec:hazel}. First, let us build some high-level intuitions.
+Sec. \ref{sec:hazel}.\footnote{For concision, the column labeled \textbf{Rule} in Figures \ref{fig:first-example} and \ref{fig:second-example} 
+indicates only the relevant \emph{non-zipper} rule (see Sec. \ref{sec:zipper-cases}.) The reader is encouraged to follow along with these examples using the reference implementation. The derivations for these examples are also available in the Agda mechanization.} First, let us build some high-level intuitions.
 
 The edit state in Hazelnut is a {Z-expression}, $\zexp$. Every Z-expression
 has a single {H-expression}, $\hexp$, or {H-type}, $\htau$, under the
-{cursor}, typeset $\zwsel{\hexp}$ or $\zwsel{\htau}$, respectively. For
+{cursor}, typeset $\zwsel{\hexp}$ or $\zwsel{\htau}$, respectively.\footnote{The reference implementation omits the triangles, while the Agda mechanization necessarily omits the colors.} For
 example, on Line 1, the empty expression hole, $\hhole{}$, is under the
 cursor.
 
-Actions act relative to the cursor. The first action that we perform is
-$\aConstruct{\flam{x}}$, which instantiates the hole with a lambda
-abstraction binding the variable $x$. This results in the Z-expression on
-Line 2, consisting of a lambda abstraction with an arrow type
-ascription. The cursor is placed on the argument type hole. Type holes are
-typeset like empty expression holes for visual consistency.
+Actions act relative to the cursor. The first action, on Line 1, is
+$\aConstruct{\flam{x}}$. This results in the Z-expression on
+Line 2, consisting of a lambda abstraction with argument $x$ under an arrow type
+ascription. The cursor is placed (arbitrarily) on the argument type hole.
 
 The actions on Lines 2-5 complete the type ascription. In particular, the
 $\aConstruct{\fnum}$ action constructs the $\tnum$ type at the cursor and
-composition of the $\aMove{\dParent}$ and $\aMove{\dChildn{2}}$ actions
-move the cursor to the next hole.
+the $\aMove{\dParent}$ and $\aMove{\dChildn{2}}$ action sequence 
+moves the cursor to the next hole. In practice, an editor would also define compound movement
+actions, e.g. an action that moves the cursor directly to the next
+ hole, in terms of these primitive movement actions.
 
 \begin{figure}[t!]
   \label{ex1}
 \begin{center}
-$\arraycolsep=4px
-\begin{array}{|r||l|l||l|l|}
+$\arraycolsep=2px
+\begin{array}[p]{|c||l|l||l|l|}
 \hline
 \# & \textbf{Z-Expression} &
 \textbf{Next Action} & \textbf{Rule}
@@ -51,75 +41,68 @@ $\arraycolsep=4px
 \aConstruct{\flam{x}} &
 \text{(\ref{r:conelamhole})}
 \\ 2 &
-\hlam{x}{\hhole{}} : \tarr{\zwsel{\hhole{}}}{\hhole{}} &
+{\hlam{x}{\hhole{}}} : \tarr{\zwsel{\hhole{}}}{\hhole{}} &
 \aConstruct{\fnum{}} &
 \text{(\ref{r:contnum})}
 \\ 3 &
-\hlam{x}{\hhole{}} : \tarr{\zwsel{\tnum{}}}{\hhole{}} &
+{\hlam{x}{\hhole{}}} : \tarr{\zwsel{\tnum{}}}{\hhole{}} &
 \aMove{\dParent} &
 \text{({\ref{rule:move-parent-arr-left}})}
 \\ 4 &
-\hlam{x}{\hhole{}} : \zwsel{\tarr{\tnum{}}{\hhole{}}} &
+{\hlam{x}{\hhole{}}} : \zwsel{\tarr{\tnum{}}{\hhole{}}} &
 \aMove{\dChildn{2}} &
 \text{({\ref{rule:move-arr-c2}})}
 \\ 5 &
-\hlam{x}{\hhole{}} : \tarr{\tnum}{\zwsel{\hhole{}}}
+{\hlam{x}{\hhole{}}} : \tarr{\tnum}{\zwsel{\hhole{}}}
 &
 \aConstruct{\fnum{}} &
 \text{(\ref{r:contnum})}
 \\ 6 &
-\hlam{x}{\hhole{}} : \tarr{\tnum{}}{\zwsel{\tnum{}}} &
+{\hlam{x}{\hhole{}}} : \tarr{\tnum{}}{\zwsel{\tnum{}}} &
 \aMove{\dParent{}} &
 \text{(\ref{rule:move-parent-arr-right})}
 \\ 7 &
-\hlam{x}{\hhole{}} : \zwsel{\tarr{\tnum{}}{\tnum{}}}
+{\hlam{x}{\hhole{}}} : \zwsel{\tarr{\tnum{}}{\tnum{}}}
 &
 \aMove{\dParent{}} &
 \text{(\ref{rule:move-parent-asc-right})}
 \\ 8 &
-\zwsel{\hlam{x}{\hhole{}} : \tarr{\tnum}{\tnum}} &
+\zwsel{{\hlam{x}{\hhole{}}} : \tarr{\tnum}{\tnum}} &
 \aMove{\dChildn{1}} &
 \text{(\ref{r:movefirstchild-asc})}
 \\ 9 &
-\zwsel{\hlam{x}{\hhole{}}} : \tarr{\tnum{}}{\tnum{}} &
+{\zwsel{\hlam{x}{\hhole{}}}} : \tarr{\tnum{}}{\tnum{}} &
 \aMove{\dChildn{1}} &
 \text{(\ref{r:movefirstchild-lam})}
 \\ 10 &
-\hlam{x}{\zwsel{\hhole{}}} : \tarr{\tnum{}}{\tnum{}} &
+{\hlam{x}{\zwsel{\hhole{}}}} : \tarr{\tnum{}}{\tnum{}} &
 \aConstruct{\fvar{x}} &
 \text{(\ref{r:conevar})}
 \\ 11 &
-\hlam{x}{\zwsel{{x}}} : \tarr{\tnum{}}{\tnum{}} &
+{\hlam{x}{\zwsel{{x}}}} : \tarr{\tnum{}}{\tnum{}} &
 {\aConstruct{\fplus}}
 &
 \text{(\ref{rule:construct-plus-compat})}
 \\ 12 &
-\hlam{x}{\hadd{x}{\zwsel{\hhole{}}}} : \tarr{\tnum{}}{\tnum{}} &
+{\hlam{x}{\hadd{x}{\zwsel{\hhole{}}}}} : \tarr{\tnum{}}{\tnum{}} &
 \aConstruct{\fnumlit{1}} &
 \text{(\ref{r:conenumnum})}
 \\ 13 &
-\hlam{x}{\hadd{x}{\zwsel{\hnum{1}}}} : \tarr{\tnum}{\tnum} &
+{\hlam{x}{\hadd{x}{\zwsel{\hnum{1}}}}} : \tarr{\tnum}{\tnum} &
 \textrm{---} &
 {\textrm{---}}
 \\ \hline
 \end{array}
 $\end{center}\vspace{-6px}
-\caption{Constructing an increment function in Hazelnut.}
+\caption{Constructing the increment function in Hazelnut.}
 \label{fig:first-example}
 \end{figure}
 
-The actions on Lines 6-9 move the cursor to the function body. For
-simplicity, Hazelnut defines only a small collection of primitive movement
-actions. In practice, an editor would also define compound movement
-actions, e.g. an action that moves the cursor directly to the next
-remaining hole, in terms of these primitive movement actions.
-
-Lines 10-12 complete the function body by first constructing the variable
-$x$, then constructing the plus form, and finally constructing the number
+After moving to the function body, Lines 10-12 complete it by first constructing the variable
+$x$, then constructing the plus form, and finally constructing the number literal 
 $\hnum{1}$. Notice that we did not need to construct the function body in
 an ``outside-in'' manner, i.e. we constructed $x$ before constructing the
-outer plus form. Luckily, the transient function bodies, $x$ and $x +
-\hhole{}$, could be checked against type $\tnum$ (as we will detail in
+outer plus form inside which $x$ ultimately appears. The transient function bodies, $x$ and $\hadd{x}{\hhole{}}$, can be checked against the given return type, $\tnum$ (as we will detail in
 Sec. \ref{sec:holes}.)
 
 
@@ -128,7 +111,7 @@ Sec. \ref{sec:holes}.)
 \begin{figure}[t!]
   \label{ex2}
 \begin{center}
-\colorbox{light-gray}{\hspace{54px} now assume $incr : \tarr{\tnum}{\tnum}$ \hspace{54px}}
+\colorbox{light-gray}{\hspace{54px} now assume $incr : \tarrnp{\tnum}{\tnum}$ \hspace{53px}}
 $\arraycolsep=4px
 \begin{array}{|r||l|l||l|l|}
 \hline
@@ -175,7 +158,7 @@ incr(\zwsel{incr(\hnum{3})}) &
 \\ \hline
 \end{array}
 $\end{center}\vspace{-6px}
-\caption{Appyling the increment function.}
+\caption{Applying the increment function.}
 \label{fig:second-example}
 \end{figure}
 
@@ -185,10 +168,8 @@ increment function from Figure \ref{fig:first-example}.
 
 We begin on Line 14 by constructing the variable $incr$. Line 15 then
 constructs the application form with $incr$ in function position, leaving
-the cursor on a hole in the argument position. Notice that we did not need
-to construct the outer application form before identifying the function
-being applied. Again, the transient edit state happens to be well-typed, so
-we needed to make no special allowances for this order of actions.
+the cursor on a hole in the argument position. Notice again that we did not construct the outer application form before identifying the function
+being applied. %Again, the transient H-expression happens to be well-typed.
 
 We now need to apply $incr$ again, so we perform the same action on Line 16
 as we did on Line 14, i.e. $\aConstruct{\fvar{incr}}$. In a syntactic
@@ -199,9 +180,9 @@ incr(\zwsel{incr})
 \]
 This edit state is ill-typed (after \emph{cursor erasure}): the argument of
 $incr$ must be of type $\tnum$ but here it is of type
-$\tarr{\tnum}{\tnum}$. Hazelnut cannot allow such an edit state to arise.
+$\tarr{\tnum}{\tnum}$. Hazelnut does not allow such an edit state to arise.
 
-The programmer could alternatively have performed the $\aConstruct{\fap}$
+We could alternatively have performed the $\aConstruct{\fap}$
 action on Line 16. This would result in the following edit state, which is
 well-typed according to the static semantics that we will define in the
 next section:
@@ -209,7 +190,7 @@ next section:
 incr(\hhole{}(\zwsel{\hhole{}}))
 \]
 The problem is that the programmer is not able to identify the intended
-function before constructing the function application form. This stands in
+function, $incr$, before constructing the function application form. This stands in
 contrast to Lines 14-15.
 
 Hazelnut's action semantics addresses this problem: rather than disallowing
