--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -9,6 +9,7 @@
 \usepackage{amsthm}
 \usepackage{ stmaryrd }
 \usepackage{mathpartir}
+\usepackage{balance}
 \usepackage{stmaryrd}
 \usepackage{wasysym}
 \usepackage{multicol}
@@ -100,16 +101,23 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
         \and Matthew A. Hammer$^3$
 }
 {
- $^1$~Carnegie Mellon University (USA)
- \and
- $^2$~Oregon State University (USA)
- \and
- $^3$~University of Colorado Boulder (USA)\vspace{-10px}
+ \begin{tabular}{ccc}
+ 	\begin{tabular}{c}
+ $^1$Carnegie Mellon University (USA)\\
+ \textsf{\hphantom{$^1$}\{comar, iev, aldrich\}@cs.cmu.edu}
+ \end{tabular} & 
+ \begin{tabular}{c}
+ $^2$Oregon State University (USA)\\
+ \textsf{\hphantom{$^1$}hiltonm@eecs.oregonstate.edu}
+ \end{tabular} & 
+  \begin{tabular}{c}
+ $^3$University of Colorado Boulder (USA)\\
+ \textsf{\hphantom{$^1$}matthew.hammer@colorado.edu}
+ \end{tabular}
+ \end{tabular}
 }
 {
-%\email{comar@cs.cmu.edu}\\
-%\texttt{http://www.cs.cmu.edu/\homedir comar/}
-%\email{hiltonm@eecs.oregonstate.edu}\\
+ % \vspace{-12px}
 }
 \else
 \authorinfo{~}{~}{\vspace{-10px}}
@@ -137,7 +145,7 @@ Hazelnut is not intended as an end-user tool itself. Instead, it serves as a fou
 editing. To that end, we describe how
 Hazelnut's rich metatheory, which we have mechanized using the Agda proof assistant, serves as a guide when we extend the calculus to include binary sum types. We also discuss various interpretations of holes, and in so doing
 reveal connections with gradual typing and contextual modal type theory, the Curry-Howard interpretation of contextual modal logic. Finally, we
-discuss how Hazelnut's semantics lends itself to implementation as an event-based functional reactive program. Our simple reference implementation is written in OCaml and compiled using \lstinline{js_of_ocaml}.
+discuss how Hazelnut's semantics lends itself to implementation as an event-based functional reactive program. Our simple reference implementation is written using \lstinline{js_of_ocaml}.
 
 \end{abstract}
 
@@ -169,7 +177,6 @@ structure editors, bidirectional type systems, gradual typing, mechanized metath
 \input{implementation}
 
 \section{Related Work and Discussion}\label{sec:rw}
-\todo{move into own file}
 \subsection{Structure Editors}
 Syntactic structure editors have a long history -- the Cornell Program
 Synthesizer~\cite{teitelbaum_cornell_1981} was first introduced in
@@ -193,10 +200,9 @@ Lamdu~\cite{lamdu}, like Hazelnut, is a structure editor for a statically
 typed functional language. It is designed for use by professional
 programmers.
 
-The examples given so far either define a language with a trivial static
-semantics, or do not attempt to maintain well-typedness as an edit
-invariant. This can pose problems, for reasons discussed in the
-Introduction. One apparent exception is Unison~\cite{unison}, a structure
+The examples given so far either do not attempt to reason statically about
+types and binding, or do not attempt to maintain well-typedness as an edit
+invariant. This can pose problems, for reasons discussed in Sec. \ref{sec:introduction}. One apparent exception is Unison~\cite{unison}, a structure
 editor for a typed functional language similar to Haskell. Like Hazelnut,
 it seems to define some notion of well-typedness for expressions with holes
 (though there is no technical documentation on virtually any aspect of its
@@ -209,19 +215,22 @@ type \cite{DBLP:conf/chi/LernerFG15}.
 
 We fundamentally differ from these projects in our design philosophy: we
 consider it essential to start by building type theoretic foundations,
-which are independent of nearly all decisions about the user interface. In
+which are independent of nearly all decisions about the user interface (other than our choice to use an explicit cursor.) In
 contrast, these editors have developed innovative user interfaces (e.g. see
 the discussion in \cite{DBLP:conf/sle/VolterSBK14}) but lack a principled
 foundational calculus. In this respect, we follow the philosophical
 approach taken by languages that are rooted in the type theoretic tradition
 and have gone to great effort to develop a clear metatheory, like Standard
-ML \cite{mthm97-for-dart,Harper00atype-theoretic}.  In the future, we hope
+ML \cite{mthm97-for-dart,Harper00atype-theoretic,Lee:2007:TMM:1190216.1190245}.  In the future, we hope
 that these lines of research will merge to produce a human-usable typed
 structure editor with sound formal foundations. Our contribution, then, is
 in defining and analyzing the theoretical properties of a small
-foundational calculus that could be extended to achieve this vision.
+foundational calculus that could be extended to achieve this vision. 
+Our implementation resembles the minimal structure editor defined in 
+Haskell by Sufrin and De Moor \cite{sufrin1999modeless}. 
 
-Some structure editor generators do operate on formal or semi-formal
+
+Some structure editor \emph{generators} do operate on formal or semi-formal
 definitions of an underlying language. For example, the Synthesizer
 Generator~\cite{Reps:1984:SG:390010.808247} allows the user to define an
 attribute grammar-based language implementation that then can be used to
@@ -232,13 +241,21 @@ structure editors \cite{ko_barista:_2006}. mbeddr is built on top of the
 commercial JetBrains MPS framework for constructing structure
 editors \cite{voelter2011language,DBLP:journals/software/VoelterWK15}. These
 systems do not give a semantics to the edit states of the structure editor
-itself, or maintain non-trivial edit invariants, as Hazelnut does.
+itself, or maintain non-trivial edit invariants, as Hazelnut does. 
 
 Related to structure editors are value editors, which operate directly on
 simple values (but not generally expressions or functions) of a programming
 language. For example, Eros is a typed value editor based in
 Haskell \cite{DBLP:conf/icfp/Elliott07}.
 
+Other work has attempted to integrate structure editing features into 
+text editors. For example, recent work has used syntactic placeholders
+reminiscent of our expression holes to decrease the percentage of 
+edit states that are malformed \cite{Amorim:2016:PSC:2997364.2997374}. This work does not consider the semantics of placeholders. 
+
+Prior work has also explored 
+formal definitions of text editor commands, e.g. using functional 
+combinators \cite{DBLP:journals/scp/Sufrin82}. 
 
 \subsection{Gradual Type Systems}
 A significant contribution of this paper is the discovery of a clear
@@ -248,10 +265,12 @@ semantics to type holes -- i.e. type consistency and type matching --
 coincides with that developed in the study of gradual type systems for
 functional languages. The pioneering work of Siek and Taha \cite{Siek06a}
 introduced type consistency. Subsequent work developed the concept of type
-matching \cite{DBLP:conf/popl/RastogiCH12,DBLP:conf/popl/GarciaC15}. In
+matching \cite{DBLP:conf/popl/RastogiCH12,DBLP:conf/popl/GarciaC15} and has further 
+studied the notion of type consistency \cite{Garcia:2016:AGT:2837614.2837670}. In
 retrospect, this relationship is perhaps unsurprising: gradual typing is,
 notionally, also motivated by the idea of iterated development of a program
-where every intermediate state is well-defined in some sense.
+where every intermediate state is well-defined in some sense, albeit at 
+different granularity.
 
 Recent work has discovered a systematic procedure for generating a
 ``gradual version'' of a standard type
@@ -271,40 +290,52 @@ informally is to use Agda's reflection features to implement such a system.
 
 An aspect of gradual typing that we did not touch on directly here is its
 concern with assigning a dynamics to programs where type information is not
-known, by inserting dynamic type casts. This would correspond to assigning
+known, by inserting dynamic type casts \cite{Siek06a} or deducing evidence for consistency during evaluation \cite{Garcia:2016:AGT:2837614.2837670}. This would correspond to assigning
 a dynamics to Hazelnut expressions with type holes such that a run-time
-error occurs when a type hole is found to be unfillable through evaluation.
+error occurs when a type hole is found to be unfillable through evaluation. This 
+may be useful as an exploratory programming tool.
 
-\subsection{Type Holes as Unification Variables}
-Another possible interpretation of type holes is as explicit unification
-variables. In other words, we might define the dynamics of Hazelnut such
-that a program cannot be run if some automated type inference procedure
-cannot statically fill in any type holes that arise. For a simple calculus,
-e.g. the STLC upon which Hazelnut is based, type inference is known to be
-decidable \cite{damas1982principal}. In more complex settings, e.g. in a
+\subsection{Bidirectional Type Systems}
+Hazelnut is bidirectionally typed \cite{Pierce:2000:LTI:345099.345100,DBLP:conf/icfp/DaviesP00,DBLP:conf/tldi/ChlipalaPH05,bidi-tutorial,odersky2001colored}. Bidirectional type systems are notable in 
+that they are easy to define, easy to implement, produce simple error messages and support advanced language features \cite{dunfield2013complete}. For example, Scala \cite{odersky2001colored} and Agda \cite{norell:thesis} are both fundamentally bidirectionally typed languages.
+
+
+\subsection{Type Reconstruction}
+An alternative approach to type inference is to use a unification-based type reconstruction system, as in functional languages like ML and Haskell \cite{damas1982principal}. This is difficult to reconcile with the approach presented in this paper, because edit actions could introduce new  unification constraints that would require placing non-empty holes around terms far from the cursor.  A whole-program hole insertion pass after each edit action could perhaps be used to recover invariants similar to those presented here, but we leave the details as future work. Our contention is that a bidirectional approach is a sweet spot in the design space of interactive systems like Hazelnut because it precludes
+``spooky errors at a distance''. Instead, the interaction is a sort of local
+dialog between the programmer and the system involving simple, familiar
+concepts -- types with holes -- rather than sets of constraints.
+
+
+An intermediate approach would be to 
+layer unification-based type generation features atop the bidirectional system. This would amount to  interpretting type holes as unification
+variables. For a simple calculus,
+e.g. the STLC upon which Hazelnut is based, type inference for complete expressions is known to be
+decidable, so type holes could be instantiated automatically once the expression that they appear within has been constructed. It would also be possible to flag expressions for which there does not exist any way to fill the type holes. In more complex settings, e.g. in a 
 dependently typed language, a partial decision procedure may still be
 useful in this regard, both at edit-time and (just prior to)
-run-time. Indeed, text editor modes for proof assistants, e.g. for Agda,
+run-time. Indeed, text editor modes for dependently typed proof assistants, e.g. for Agda,
 attempt to do exactly this for indicated ``type holes'' (and do not always
 succeed.)
 
 \subsection{Exceptions}
-Expression holes, too, could dynamically be interpreted in several
-ways. One straightforward approach would be to dynamically raise an
-exception if evaluation encounters an expression hole. Indeed,
+Expression holes can be interpreted in several
+ways. One straightforward interpretation is to treat them 
+like expressions that raise exceptions. Indeed,
 placing \textt{raise Unimplemented} or similar in portions of an expression
 that are under construction is a common practice across programming
-languages.
+languages today. The GHC dialect of Haskell recently introduced an explicit notion of a 
+typed hole that behaves similarly \cite{GHC/holes}. 
 
 \subsection{Type-Directed Program Synthesis}
 Some text editor modes, e.g. those for proof assistants like
 Agda \cite{norell:thesis} and Idris \cite{brady2013idris}, support a more
 explicit hole-based programming model where indicated expression holes are
 treated as sites where the system can be asked to automatically generate an
-expression of an appropriate type. These systems are not statically
-well-defined themselves (though see below.)
+expression of an appropriate type. %These systems are not statically
+% well-defined themselves (though see below.)
 
-The Graphite system used an informal model of typed holes in Java to allow
+The Graphite system borrowed Eclipse's heuristic model of typed holes for Java to allow
 library providers to associate interactive code generation interfaces with
 types \cite{Omar:2012:ACC:2337223.2337324}.
 
@@ -314,12 +345,17 @@ well-definedness throughout the editing process, Hazelnut provides
 researchers interested in editor-integrated type-directed program synthesis
 with a formal foundation upon which to build.
 
-\subsection{Contextual Modal Type Theory}
-Expression holes can also be understood by invoking the notion of
-a \emph{metavariable} as found in contextual modal type theory
+\subsection{Tactics}
+
+Interactive proof refinement systems, e.g. those in LCF \cite{Gordon:1978:MIP:512760.512773}, and more recent typed tactic systems, e.g. Mtac for Coq \cite{Ziliani:2013:MMT:2544174.2500579}, 
+support an explicit model of a ``current'' typed hole that serves as the 
+target of program synthesis. Hazelnut differs in that edits can occur anywhere within a term.
+
+
+A related approach is to interpret expression holes as the \emph{metavariables} of contextual modal type theory
 (CMTT) \cite{DBLP:journals/tocl/NanevskiPP08}. In particular, expression
 holes have types and are surrounded by contexts, just as metavariables in
-CMTT are associated with types and contexts. This helps to clarify the
+CMTT are associated with types and contexts. This begins to clarify the
 logical meaning of a typing derivation in Hazelnut -- it conveys
 well-typedness relative to an (implicit) modal context that extracts each
 expression hole's type and context. The modal context must be emptied --
@@ -328,13 +364,12 @@ proper type in the proper context -- before the expression can be
 considered complete. This corresponds to the notion of modal necessity in
 contextual modal logic.
 
-Making the modal context explicit in our semantics is not technically
-useful given our stated purpose -- interactive program editing is not
+We did not make the modal context explicit in our semantics because interactive program editing is not
 merely hole filling in Hazelnut (i.e. the cursor need not be on a
-hole). Moreover, the hole's type and context become apparent as our action
-semantics traverses the zipper structure on each step. Some interactive
-proof assistants, however, support a tactic model based directly on hole
-filling, so the connection to CMTT and similar systems is more useful. For
+hole.) Moreover, the hole's type and context become apparent as our action
+semantics traverses the zipper structure on each step. For interactive
+proof assistants that support a tactic model based directly on hole
+filling, as just discussed, the connection to CMTT and similar systems is more useful. For
 example, Beluga \cite{DBLP:conf/flops/Pientka10} is based on dependent CMTT
 and aspects of Idris' editor support \cite{brady2013idris} are based on
 McBride's OLEG \cite{mcbride2000dependently} and Lee and Friedman have
@@ -360,28 +395,6 @@ calculi \cite{DBLP:journals/entcs/Sands97}. Being able to edit a running
 program also has connections to less formal work on ``live programming''
 interfaces \cite{burckhardt2013s,lamdu}.
 
-\subsection{Evaluation Strategies: A High-Dimensional Space}
-To summarize, we have discussed three different evaluation strategies in
-the presence of type holes:
-\begin{enumerate}[noitemsep]
-\item ...as preventing evaluation (the standard approach.)
-\item ...as unknown types, in the gradual sense.
-\item ...as unification variables.
-\end{enumerate}
-In addition, we have discussed four different evaluation strategies in the
-presence of expression holes:
-\begin{enumerate}[noitemsep]
-\item ...as preventing evaluation (the standard approach.)
-\item ...as causing exceptions.
-\item ...as sites for automatic program synthesis.
-\item ...as the closures of CMTT.
-\end{enumerate}
-
-Every combination of these choices could well be considered in the design
-of a full-scale programming system in the spirit of Hazelnut. Indeed, the
-user might be given several options from among these combinations,
-depending on their usage scenario. Many of these warrant further inquiry.
-
 \section{Conclusion}
 \label{sec:future}
 This paper presented Hazelnut, a type theoretic structure editor
@@ -404,7 +417,7 @@ details do not enter into our design.
 Hazelnut is, obviously, a very limited language at its core. So the most
 obvious avenue for future work is to increase the expressive power of this
 language by extension. Our plan is to simultaneously maintain a
-mechanization and implementation (following, for example, Standard ML) as
+mechanization and implementation (following, for example, Standard ML \cite{Lee:2007:TMM:1190216.1190245}) as
 we proceed, ultimately producing the first large-scale, formally verified
 bidirectionally typed structure editor.
 
@@ -417,27 +430,50 @@ editor (e.g. SML's \texttt{open}?), while other features may only be
 practical with editor support. We intend to use Hazelnut and derivative
 systems thereof as a platform for rigorously exploring such questions.
 
+\subsubsection{Evaluation Strategies: A High-Dimensional Space}
+The related work brought up in the previous section suggests three different evaluation strategies in
+the presence of type holes:
+\begin{enumerate}[noitemsep]
+\item ...as preventing evaluation (the standard approach.)
+\item ...as unknown types, in the gradual sense.
+\item ...as unification variables.
+\end{enumerate}
+In addition, we have discussed four different evaluation strategies in the
+presence of expression holes:
+\begin{enumerate}[noitemsep]
+\item ...as preventing evaluation (the standard approach.)
+\item ...as causing exceptions.
+\item ...as sites for automatic program synthesis.
+\item ...as the closures of CMTT.
+\end{enumerate}
+
+Every combination of these choices could well be considered in the design
+of a full-scale programming system in the spirit of Hazelnut. Indeed, the
+user might be given several options from among these combinations,
+depending on their usage scenario. Many of these warrant further inquiry.
+
+
 \subsubsection{Editor Services}
 There are various aspects of the editor model that we have not yet
 formalized. For example, our action model does not consider how actions are
 actually entered using, for example, key combinations or chords. In
-practice, we would want also to rank available actions in some reasonable
+practice, we would want also to suggest sensible compound actions, and 
+to rank these suggested actions in some reasonable
 manner (perhaps based on usage data gathered from other users or code
-repositories.) Designing a rigorous typed probability model over actions
-and H-expressions is one avenue of research that we have started to
+repositories.) Designing a action suggestion semantics and a rigorous typed probability model over actions is one avenue of research that we have started to
 explore, with intriguing initial results.
 
 \subsubsection{Programmable Actions}
 Our language of actions is intentionally primitive. However, even now it
 acts much like a simple imperative command language. This suggests future
-expansion to, for example, a true tactic language. Alternatively, it may be
-more useful to develop the notion of an \emph{action macro}, whereby
+expansion to, for example, a true \emph{action macro} language, whereby
 functional programs could themselves be lifted to the level of actions to
 compute non-trivial compound actions. Such compound actions would give a
 uniform description of transformations ranging from the simple -- like
 ``move the cursor to the next hole to the right'' -- to quite complex whole
 program refactoring, while remaining subject to the core Hazelnut
-metatheory.
+metatheory. Techniques like those in advanced tactic systems, e.g. Mtac, might be useful 
+in proving these action macros correct \cite{Ziliani:2013:MMT:2544174.2500579}.
 
 \subsubsection{Views}
 Another research direction is in exploring how types can be used to control
@@ -447,10 +483,11 @@ languages} (TSLs), it should be possible to have the type that an
 expression is being analyzed against define alternative display forms and
 interaction modes \cite{TSLs}.
 
-It should also be possible to develop a semantics of semantic comments,
-i.e. comments that mention semantic structures. These would be subject to
+It should also be possible to develop the concept of semantic comments,
+i.e. comments that mention semantic structures or even contain values. These would be subject to
 the same operations, e.g. renaming, as other structures, helping to address
-the problem of comments becoming inconsistent with code.
+the problem of comments becoming inconsistent with code. This system, generalized sufficiently,
+could one day help unify document editing with program editing.
 
 \subsubsection{Collaborative Programming}
 Finally, we did not consider any aspects of \emph{collaborative
@@ -463,7 +500,7 @@ work.
 Although we make few empirical claims in this paper, it is ultimately an
 empirical question as to whether structure editors, and typed structure
 editors, are practical. We hope to conduct user studies once a richer
-semantics has been developed.
+semantics and a practical implementation thereof has been developed.
 
 \subsubsection{More Theory}
 Connections with gradual type systems and CMTT, discussed in the previous
@@ -486,18 +523,18 @@ systems, for we will not forever stay confined to mere strings of symbols.}
 \input{acks.tex}
 
 \clearpage
-
+\balance
 \bibliographystyle{abbrvnat}
 % The bibliography should be embedded for final submission.
 \bibliography{bibliography}
 
-\iftr
-\clearpage
+% \iftr
+% \clearpage
 %\onecolumn
-\appendix
-\input{appendix}
-\else
+% \appendix
+% \input{appendix}
+% \else
 % No Appendix Here
-\fi
+% \fi
 
 \end{document}
