added ack for Mozilla gift

--- a/acks.tex
+++ b/acks.tex
@@ -1,2 +1,4 @@
 Thanks to Ed Morehouse for counsel on mechanization and Barendrecht's
 Convention, and to Vincent Zeng for \textit{pro bono} artistic services.
+%
+The last author thanks Mozilla for a generous gift.
